fix sticky hover css on ios

--- a/src/css/board.scss
+++ b/src/css/board.scss
@@ -120,7 +120,7 @@
                     width: 66%;
                     background-color: #7d85cb;
                     border-radius: 10px;
-                    color: white;
+                    color: #fff;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -132,7 +132,7 @@
                     }
 
                     &:hover {
-                        color: #000 !important;
+                        color: #fff !important;
                     }
                 }
             }
